--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <title>Résumé</title>
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   </head>
   <body>
     <main>
@@ -17,13 +19,40 @@
               <div class="thirteen wide column">
                 <div class="stackable grid">
                   <div class="sixteen wide column">
-                    <!-- Name, job, contacts -->
+                    <div class="job">President of the United States of America</div>
+                    <ul class="contacts">
+                      <li>
+                        <a href="https://www.fb.com/DonaldTrump" rel="author" class="facebook">
+                          <i class="fab fa-facebook-square"></i>
+                          <span>DonaldTrump</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="mailto:realDonaldTrump@whitehouse.gov" rel="author" class="mail">
+                          <i class="fas fa-envelope"></i>
+                          <span>realDonaldTrump@whitehouse.gov</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://twitter.com/realDonaldTrump" rel="author" class="twitter">
+                          <i class="fab fa-twitter"></i>
+                          <span>realDonaldTrump</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.instagram.com/realDonaldTrump/" rel="author" class="twitter">
+                          <i class="fab fa-instagram"></i>
+                          <span>realDonaldTrump</span>
+                        </a>
+                      </li>
+                    </ul>
                   </div>
                   <div class="sixteen wide mobile only column">
                     <div class="divider"></div>
                   </div>
                   <div class="sixteen wide column">
-                    <!-- Intro -->
+                    <h2>Résumé</h2>
+                    <p>&mdash; I'm the most successful person ever to run for the presidency, by far. Nobody's ever been more successful than me. I'm the most successful person ever to run. Ross Perot isn't successful like me. Romney &mdash; I have a Gucci store that's worth more than Romney. Sorry losers and haters, but my IQ is one of the highest &mdash; and you all know it! Please don't feel so stupid or insecure, it's not your fault.</p>
                   </div>
                 </div>
               </div>
