--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="https://www.instagram.com/realDonaldTrump/" rel="author" class="twitter">
+                        <a href="https://www.instagram.com/realDonaldTrump/" rel="author" class="instagram>
                           <i class="fab fa-instagram"></i>
                           <span>realDonaldTrump</span>
                         </a>
